cleaning of the files

--- a/DBfiller.ipynb
+++ b/DBfiller.ipynb
@@ -62,27 +62,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''#build the list of dictionaries for each message\n",
-    "list_of_messages=[]\n",
-    "for i,message in enumerate(messages):\n",
-    "    now = datetime.now()\n",
-    "    dt_string = now.strftime(\"%d/%m/%Y %H:%M:%S\")\n",
-    "    dic={'user_id':random.choice(users),\n",
-    "         'text':message,\n",
-    "         'time':dt_string,\n",
-    "         'chat_id':[],\n",
-    "    \n",
-    "     }\n",
-    "    list_of_messages.append(dic)\n",
-    "#messages_ids=db.messages.insert_many(list_of_messages)'''"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [],
@@ -1202,6 +1181,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I've just tried the to analyze the messages of a chat before building the api function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1289,81 +1275,6 @@
     "sent1={}\n",
     "for k,v in sentiments.items():#k =user, value=text\n",
     "    sent1[k]=v['text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "90\n"
-     ]
-    }
-   ],
-   "source": [
-    "'''import ast\n",
-    "chat_id='5ead2b381f313a96eed3c7e7'\n",
-    "r = requests.get(f'http://localhost:3500//chat/{chat_id}/list')\n",
-    "messages1=r.json()\n",
-    "print(len(messages1))\n",
-    "\n",
-    "users_messages={}\n",
-    "#prendo tutti i messaggi di un utente e li unisco\n",
-    "for k,v in messages1.items():\n",
-    "    mes_user=db.messages.find_one({'_id':ObjectId(k)})#fetcg=h the message\n",
-    "    user=mes_user['user_id']#fetch the user\n",
-    "    user_texts=list(db.messages.find({\"user_id\":user},{'text':1}))#fetch all the messages for the user\n",
-    "    user_text=''\n",
-    "    for text in user_texts:\n",
-    "        text = ast.literal_eval(text['text'])\n",
-    "        txt=''\n",
-    "        for t in text:#all the messages in an unic string\n",
-    "            txt += t\n",
-    "        user_text=user_text +' '+ txt\n",
-    "        users_messages[user]=user_text   \n",
-    "    \n",
-    "    \n",
-    "sentiments={}#k =user, value={text,score}\n",
-    "for k,v in users_messages.items():    \n",
-    "    sentiments[k]={'text':v,\"score\":sia.polarity_scores(v)}\n",
-    "sent1={}\n",
-    "for k,v in sentiments.items():#k =user, value=text\n",
-    "    sent1[k]=v['text']\n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''with open('sent1.txt', 'w') as outfile:\n",
-    "    json.dump(sent1, outfile)'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'compound': 0.0772, 'neg': 0.0, 'neu': 0.794, 'pos': 0.206}"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sia.polarity_scores('I do this thing called whatever I want')"
    ]
   },
   {
@@ -2279,90 +2190,6 @@
     "    return list(col[0:3].index)\n",
     "\n",
     "get3closest(sim_df,ObjectId('5ead3bea1f313a96eed41502'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import stopwords\n",
-    "nltk.download('stopwords')\n",
-    "set(stopwords.words('english'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get=list(db.chats.find({},{'_id':1}))\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('5ead3bec1f313a96eed41de6')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41de7')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41de8')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41de9')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41dea')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41deb')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41dec')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41ded')}\n",
-      "{'_id': ObjectId('5ead3bec1f313a96eed41dee')}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for g in get:\n",
-    "    print(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = requests.get(f'http://localhost:3500//chat/ids')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['5ead3bec1f313a96eed41de6',\n",
-       " '5ead3bec1f313a96eed41de7',\n",
-       " '5ead3bec1f313a96eed41de8',\n",
-       " '5ead3bec1f313a96eed41de9',\n",
-       " '5ead3bec1f313a96eed41dea',\n",
-       " '5ead3bec1f313a96eed41deb',\n",
-       " '5ead3bec1f313a96eed41dec',\n",
-       " '5ead3bec1f313a96eed41ded',\n",
-       " '5ead3bec1f313a96eed41dee']"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(r.json().keys())"
    ]
   },
   {
