--- a/Datamad0320ChatSentimentAnalysis.ipynb
+++ b/Datamad0320ChatSentimentAnalysis.ipynb
@@ -31,10 +31,6 @@
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity as distance\n",
-    "from src.app import app\n",
-    "from pymongo import MongoClient\n",
-    "from src.helpers.errorHandler import errorHandler ,Error404 ,APIError\n",
-    "from src.config import DBURL\n",
     "from bson.json_util import dumps\n",
     "from bson import ObjectId\n",
     "import json\n",
@@ -53,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='https://slack.com/api/channels.history?token={token}&channel={channel}&count=678&pretty=1'\n"
+    "#url='https://slack.com/api/channels.history?token={token}&channel={channel}&count=678&pretty=1'\n"
    ]
   },
   {
